# presearch-browser-core

./: .gitignore  BUILD.gn  CONTRIBUTING.md  README.md  package-lock.json  package.json
.storybook/: locale.ts  manager.js
android/: brave_java_resources.gni
app/: app_management_strings.grdp  bookmarks_strings.grdp  brave_exe.ver  brave_generated_resources.grd  brave_main_delegate.cc  brave_strings.grd  brave_strings_override.grd  extensions_strings.grdp  extensions_strings_override.grdp  file_manager_strings.grdp  generated_resources.grd  generated_resources_override.grd  gmc_strings.grdp  media_router_strings.grdp  nearby_share_strings.grdp  nux_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  os_settings_strings_override.grdp  printing_strings.grdp  profiles_strings.grdp  settings_brave_strings.grdp  settings_brave_strings_override.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp  supervised_user_error_page_strings.grdp  vr_strings.grdp  web_time_limit_error_page_strings.grdp  welcome_strings.grdp
browser/: about_flags.cc  brave_content_browser_client.cc  brave_content_browser_client_browsertest.cc  brave_profile_prefs.cc  brave_scheme_load_browsertest.cc
common/: BUILD.gn  brave_channel_info_unittest.cc  brave_content_client_unittest.cc  brave_services_key_helper.cc  network_constants.cc  resource_bundle_helper.cc  resource_bundle_helper.h  url_constants.cc  webui_url_constants.cc
components/: autofill_assistant_strings.grdp  autofill_payments_strings.grdp  autofill_strings.grdp  browsing_data_strings.grdp  commerce_strings.grdp  components_brave_strings.grd  components_strings.grd  error_page_strings.grdp  find_in_page_strings.grdp  flags_strings.grdp  heavy_ad_intervention_strings.grdp  history_clusters_strings.grdp  history_strings.grdp  management_ios_strings.grdp  management_strings.grdp  new_or_sad_tab_strings.grdp  (+20 more)
components/brave_shields/resources/panel/: BUILD.gn
components/brave_shields/resources/panel/components/main-panel/: index.tsx
components/brave_shields/resources/panel/data/shields/: manifest.json  regional_catalog.json
components/brave_shields/resources/panel/stories/: locale.ts
(+855 files in other folders)
