# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

import("//brave/components/common/typescript.gni")
import("//mojo/public/tools/bindings/mojom.gni")

transpile_web_ui("brave_shields_panel_ui") {
  entry_points = [ [
        "brave_shields_panel",
        rebase_path("shields_panel.tsx"),
      ] ]
  resource_name = "brave_shields_panel"
  deps = [ "//brave/components/brave_shields/common:mojom_js" ]
}

pack_web_resources("brave_shields_panel_generated") {
  resource_name = "brave_shields_panel"
  output_dir = "$root_gen_dir/brave/components/brave_shields/resources/panel"
  deps = [ ":brave_shields_panel_ui" ]
}

if (is_mac) {
  group("presearch_shields_data") {
    deps = []
    deps += [ ":presearch_shields_framework_bundle_data" ]
  }

  bundle_data("presearch_shields_framework_bundle_data") {
    sources = [ "//brave/components/brave_shields/resources/panel/data/shields/manifest.json",
                "//brave/components/brave_shields/resources/panel/data/shields/regional_catalog.json",
                "//brave/components/brave_shields/resources/panel/data/shields/resources.json",
                "//brave/components/brave_shields/resources/panel/data/shields/rs-ABPFilterParserData.dat" ]
    outputs = [ "{{bundle_resources_dir}}/{{source_file_part}}" ]
  }
} else {
  group("presearch_shields_data") {
    deps = []
    deps += [ ":shields_data"]
  }
  copy("shields_data") {
    sources = [ "//brave/components/brave_shields/resources/panel/data/shields/manifest.json",
                "//brave/components/brave_shields/resources/panel/data/shields/regional_catalog.json",
                "//brave/components/brave_shields/resources/panel/data/shields/resources.json",
                "//brave/components/brave_shields/resources/panel/data/shields/rs-ABPFilterParserData.dat" ]
    outputs = [ "$root_out_dir/{{source_file_part}}" ]
  }
}